fix: correcion modulo 4-5